--- a/index.html
+++ b/index.html
@@ -15,9 +15,12 @@
   </style>
 </head>
 <body>
-  About
-  Discover
-  Get Started
+  <nav>
+    About
+    Discover
+    Get Started
+  </nav>
+ 
 
   Mastercraft Bamboo Monitor Riser
   A beautiful & handcrafted monitor stand to reduce neck and eye strain.
